add google analytics & comment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
   {% include head.html %}
+  {% include google_analytics.html %}
 
   <body>
 
@@ -43,5 +44,6 @@
         }, false);
       })(document);
     </script>
+    {% include duoshuo.html %} 
   </body>
 </html>
