try disqus as comment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
         }, false);
       })(document);
     </script>
-    {% include duoshuo.html %} 
+    <!-- {% include duoshuo.html %}  -->
+    {% include disqus.html %}
   </body>
 </html>
