--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,20 +31,5 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <!-- For latex formula -->
-  <script type="text/x-mathjax-config"> 
-  MathJax.Hub.Config({
-            TeX: { equationNumbers: { autoNumber: "AMS" } }
-        }); 
-  </script>
-  <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-            tex2jax: {
-                inlineMath: [ ['$','$'], ['$$$','$$$'], ["\\(","\\)"] ],
-                processEscapes: true
-            }
-          });
-  </script>
-<script type="text/javascript"
-  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+  {% include mathjax.html %}
 </head>
